@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Fri, 11 Oct 2024 20:47:50 +0800</lastBuildDate>
+  <lastBuildDate>Fri, 11 Oct 2024 20:53:30 +0800</lastBuildDate>
 
   <item>
   <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</title>
@@ -120,5 +120,15 @@ NCT成員中本悠太發表個人歌曲</description>
 朴載範在音樂試聽會上表示，自從《Everything You Wanted》以來，他一直計劃推出更多R&amp;B專輯，但由於各種原因，這個計劃一直被推遲。他終於成功地收集了過去七年來他工作過的R&amp;B曲目，並將它們匯集成了一張專輯。</description>
   <category>K-Pop</category>
   <pubDate>Fri, 11 Oct 2024 20:47:50 +0800</pubDate>
+</item><item>
+  <title>東京隱藏的寶藏！全女性演出「The Show」在神田明神震撼登場，帶你體驗傳統與現代的完美融合</title>
+  <link>https://www.famechos.me/news/東京隱藏的寶藏！全女性演出「The Show」在神田明神震撼登場，帶你體驗傳統與現代的完美融合.html</link>
+  <description>在東京體驗傳統日本文化：如何見到藝妓
+
+如果你錯過了在京都祇園見到藝妓的機會，不要擔心。在東京也有機會見到藝妓，只要你知道在哪裡找。
+
+藝妓是許多人嚮往的傳統日本文化體驗。雖然京都是最著名的藝妓表演地，但東京也有許多機會讓你見到藝妓。</description>
+  <category>Others</category>
+  <pubDate>Fri, 11 Oct 2024 20:53:30 +0800</pubDate>
 </item></channel>
 </rss>
